# friend_todo

todo_ahsaan_app/: .env  pyproject.toml
todo_ahsaan_app/todo_ahsaan_app/: route.py  setting.py
todo_frontend/src/app/: TodoForm.tsx  TodoItem.tsx  page.tsx
todo_frontend/src/app/context/: todoCtx.ts
todo_frontend/src/components/interfaces/: index.ts
